# progress-table

./: .gitignore  LICENSE.txt  README.md  hooks.py  integration.md  integrations.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check-code-coverage.yaml  check-code-quality.yaml  check-with-pytest.yaml  import-and-run.yaml  install-from-pypi-run.yaml  install-from-web-run.yaml  install-local-and-run.yaml  install-locally-and-run.yaml  python-3.10.yaml  python-3.7.yaml  python-3.8.yaml  python-3.9.yaml
docs/: README.md  advanced-usage.md  integrations.md  v3-notice.md
examples/: brown2d.py  cumulating.py  download.py  download_v1.py  download_v2.py  features.py  fibonacci.py  nn_training.py  nn_training_non_interactive.py  tictactoe.py  training.py
progress_table/: __init__.py  common.py  progress_table.py  styles.py  symbols.py  test_docs_automated.py  tests.py
progress_table/compat/: progress_table.py
progress_table/tests/: test_docs_automated.py  test_output_1.py
progress_table/v0/: __init__.py  progress_table.py  symbols.py
progress_table/v1/: common.py  progress_table.py  styles.py
tests/: test_auto_docs.py  test_auto_examples.py  test_docs_auto.py  test_docs_automated.py  test_end_to_end.py  test_examples.py  test_examples_auto.py  test_examples_automated.py  test_from_gemini.py  test_from_gpt4o.py  test_output_1.py  test_unit.py  test_unit_from_claude.py  test_unit_from_gemini.py
